# kic

./: .gitignore  Makefile  README.md  README.orig  configure  configure.in
msw_package/: Makefile.in  kic.iss.in
src/cd/: Makefile.in  actions.c  cd.c  gencif.c  misc.c  nmalloc.c  parser.c  paths.c  xforms.c
src/convert/: Makefile.in  convert.c  convert1.c
src/ginterf/: Makefile.in  fb.c  ginterf.c  wfb.c
src/help/: Makefile.in  help.c  provide.c  readhelp.c  textdisp.c
src/include/: cd.h  cdext.h  coords.h  driver.h  fb.h  hlpdefs.h  kic.h  kicext.h  macros.h  mfb.h  mfbext.h  nmalloc.h  parser.h  prefix.h  sline.h  stream.h
src/kic/: 45s.c  Makefile.in  attri.c  basic.c  boxes.c  break.c  change.c  contexts.c  copy.c  debug.c  delete.c  dir.c  erase.c  flatten.c  grid.c  hcopy.c  header  init.c  instance.c  labels.c  lineclip.c  lines.c  logo.c  measure.c  modify.c  more.c  point.c  polyclip.c  polygns.c  prpty.c  redispla.c  select.c  sline.c  techfile.c  viewport.c  wires.c  xorbox.c  zoom.c
src/xmfb/: 6x8font.c  8x14font.c  8x16font.c  8x8font.c  Makefile.in  mfb.c  mfbcsdl.c  mfbtext.c  text1.c  xfb.c
startup/: README  kic_help.txt  kic_tech.110  kic_tech.220  kic_tech.300  kic_tech.hyp  kic_tech.scm  logofont.kic  ltab  ltab.hyp  ltab.trw
util/: kictree  mkdirpth  mkwinpkg  utod.c
